-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: client-libs
-
None
-
b24
sun.java2d.fontpath is set in launcher code from
an environment variable "JAVA2D_FONTPATH".
and later read by sun.font.SunFontManager
It is not clear that we still need that support at all, and likely
not in the launcher.
- relates to
-
JDK-8212700 Change the mechanism by which JDK loads the platform-specific AWT Toolkit
-
- Resolved
-