8212703: Remove sun.java2d.fontpath property from java launcher code

Reviewed-by: alanb, rriggs